--- a/WMstyle.css
+++ b/WMstyle.css
@@ -1,3 +1,4 @@
+/* This is the universal css for the entire website */
 body {
     font-size:62.5%;
     font-size:1.6rem;
@@ -40,3 +41,7 @@ nav li a:hover {
     background-color:white;
     color:aqua;
 }
+/* This is the css for the HOME page */
+/* This is the css for the RESIDENTIAL page */
+/* This is the css for the COMMERCIAL page */
+/* This is the css for the GALLERY page */
