--- a/WMstyle.css
+++ b/WMstyle.css
@@ -1,4 +1,7 @@
 /* This is the universal css for the entire website */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Condensed:wght@700&display=swap');
+/* Roboto Condensed BOLD 700 (for headings) */
+/* Poppins light 300, regular 400, semi-bold 600 */
 body {
     font-size:62.5%;
     font-size:1.6rem;
@@ -7,16 +10,20 @@ body {
 p {
     color:rgb(236, 252, 242);
     font-size:1.2rem;
-    font-family: 'Poppins', sans-serif;
     font-weight:600;
+    font-family: 'Poppins', sans-serif;
 }
 h2 {
     color:#3DB54A;
     text-align:center;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight:700;
 }
 h3 {
     font-size:1.4em;
     color:#3DB54A;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight:700;
 }
 li {
     color:antiquewhite;
@@ -34,7 +41,7 @@ nav {
     margin:10px;
     background-color:#8DC641;
 }
-nav .wrap{
+nav .wrap{   /* for the navigation links bar */
     width:800px;
     margin:auto;
 }
@@ -63,7 +70,7 @@ nav li a:hover {
     background-color:white;
     color:rgb(39, 145, 62);
 }
-.inquiry {
+.inquiry { /* inquiry form is the same across all pages */
     background-color:beige;
     border:5px solid black;
     margin:10px;
@@ -74,7 +81,7 @@ nav li a:hover {
     float:right;
     text-align:center;
 }
-.wrap {
+.wrap { /* basic wrap functions */
     display:flex;
     flex-direction:row;
     justify-content:space-between;
@@ -84,7 +91,7 @@ nav li a:hover {
 /* This is the css for the HOME page 
    Will be updated when more info is provided
 */
-.aboutus {
+.aboutus { /* needs proper team photo */
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/teamphoto.jpg");
     background-size:cover;
     background-position:center;
@@ -93,7 +100,7 @@ nav li a:hover {
     padding:1%;
     border:5px solid black;
 }
-.services {
+.services { /* the flex box for the services sections */
     display:flex;
     flex-direction:row;
     justify-content:space-between;
@@ -109,6 +116,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
     /* add shadow to make it look like leaning inwards */
 }
 .sectionmid {
@@ -119,7 +128,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add full shadow */
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .sectionright {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Strata.jpg"); /* https://unsplash.com/photos/awL_YCtPGv4 */
@@ -129,9 +139,10 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow to make it look like leaning inwards */
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
-.whychooseus {
+.whychooseus { /* flex box for why choose us section */
     display:flex;
     justify-content:space-between;
     width:100%;
@@ -144,6 +155,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .harm {
     background-color:#d86732;
@@ -151,6 +164,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .friendly {
     background-color:#8C240F;
@@ -158,6 +173,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .localbusiness {
     background-color:#d86732;
@@ -165,11 +182,113 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
+}
+@media only screen and (max-width:768px) {
+    /* for mobile phones (ONLY HOME PAGE SO FAR) */
+    .inquiry {
+        background-color:beige;
+        border:5px solid black;
+        margin:10px;
+        padding:5px;
+        font-size:1.2rem;
+        position:sticky;
+        width:93%;
+        text-align:center;
+    }
+    .wrap {
+        display:flex;
+        flex-direction:column;
+        justify-content:space-between;
+        width:99%;
+        max-width:99%;
+    }
+    .aboutus {
+        background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/teamphoto.jpg");
+        background-size:cover;
+        background-position:center;
+        width:93%;
+        margin:10px;
+        padding:1%;
+        border:5px solid black;
+    }
+    .services {
+        display:flex;
+        flex-direction:column;
+        justify-content:space-between;
+        width:100%;
+        max-width:100%;
+        white-space:normal;
+    }
+    .sectionleft {
+        background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Residential.jpg"); /* https://www.pexels.com/photo/house-lights-turned-on-106399/ */
+        background-size:cover;
+        background-position:center;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
+    .sectionmid {
+        background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Commercial.jpg"); /* https://www.pexels.com/photo/7-eleven-store-photo-during-sunset-3116970/ */
+        background-size:cover;
+        background-position:center;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
+    .sectionright {
+        background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Strata.jpg"); /* https://unsplash.com/photos/awL_YCtPGv4 */
+        background-size:cover;
+        background-position:center;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
+    .whychooseus {
+        display:flex;
+        flex-direction:column;
+        justify-content:space-between;
+        width:100%;
+        max-width:100%;
+        white-space:normal;
+    }
+    .knowhow {
+        background-color:#8C240F;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
+    .harm {
+        background-color:#d86732;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
+    .friendly {
+        background-color:#8C240F;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
+    .localbusiness {
+        background-color:#d86732;
+        border:5px solid black;
+        padding:5px;
+        margin:5px;
+        text-align:center;
+    }
 }
 /* This is the css for the RESIDENTIAL page 
    Will be updated when more info is provided
 */
-.beforeafter {
+.beforeafter {  /* flex box for brefore/after photos when they are received */
     display:flex;
     flex-direction:row;
     background-color:#5c1e1e;
@@ -181,7 +300,7 @@ nav li a:hover {
     align-items:center;
     white-space:normal;
 }
-.resservices {
+.resservices { /* flexbox for residential services sections */
     display:flex;
     flex-wrap:nowrap;
     justify-content:space-around;
@@ -197,7 +316,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow to make it look like leaning inwards */
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .ressectionmidtop { /* Photo by Dids from Pexels */
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Windows.jpg");
@@ -207,7 +327,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow */
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .ressectionrighttop {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Deck.jpg");
@@ -217,7 +338,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow to make it look like leaning inwards */
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
 .ressectionleftbottom { /* Photo by Gilmer Diaz Estela from Pexels */
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/demoss.jpg");
@@ -227,7 +349,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow to make it look like leaning inwards */
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .ressectionmidbottom {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Gutters.jpg");
@@ -237,7 +360,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow */
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .ressectionrightbottom {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/concrete.jpg");
@@ -247,7 +371,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
-    /* add shadow to make it look like leaning inwards */
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
 /* This is the css for the STRATA page 
    Will be updated when more info is provided
@@ -261,7 +386,7 @@ nav li a:hover {
     padding:1%;
     border:5px solid black;
 }
-.strataservices {
+.strataservices { /* flexbox for strata services sections */
     display:flex;
     flex-wrap:nowrap;
     justify-content:space-around;
@@ -277,6 +402,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .strataservicetopmid {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/windows.jpg");
@@ -286,6 +413,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .strataservicetopright {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Deck.jpg");
@@ -295,6 +424,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
 .strataservicebottomleft {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/demoss.jpg");
@@ -304,6 +435,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .strataservicebottommid {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Gutters.jpg");
@@ -313,6 +446,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .strataservicebottomright {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/concrete.jpg");
@@ -322,6 +457,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
 /* This is the css for the COMMERCIAL page
    Will be updated when more info is provided
@@ -335,7 +472,7 @@ nav li a:hover {
     padding:1%;
     border:5px solid black;
 }
-.commercialservices {
+.commercialservices { /* flexbox for commercial services sections */
     display:flex;
     flex-wrap:nowrap;
     justify-content:space-around;
@@ -351,6 +488,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .comservicetopmid {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/windows.jpg");
@@ -360,6 +499,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .comservicetopright {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Deck.jpg");
@@ -369,6 +510,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
 .comservicebottomleft {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/demoss.jpg");
@@ -378,6 +521,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) -5px 5px, rgba(55, 78, 25, 0.3) -10px 10px, rgba(55, 78, 25, 0.2) -15px 15px, rgba(55, 78, 25, 0.1) -20px 20px, rgba(55, 78, 25, 0.05) -25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #48 by Alligator */
 }
 .comservicebottommid {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Gutters.jpg");
@@ -387,6 +532,8 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 0px 5px, rgba(55, 78, 25, 0.3) 0px 10px, rgba(55, 78, 25, 0.2) 0px 15px, rgba(55, 78, 25, 0.1) 0px 20px, rgba(55, 78, 25, 0.05) 0px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #49 by Alligator */
 }
 .comservicebottomright {
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/concrete.jpg");
@@ -396,7 +543,10 @@ nav li a:hover {
     padding:5px;
     margin:5px;
     text-align:center;
+    box-shadow: rgba(55, 78, 25, 0.4) 5px 5px, rgba(55, 78, 25, 0.3) 10px 10px, rgba(55, 78, 25, 0.2) 15px 15px, rgba(55, 78, 25, 0.1) 20px 20px, rgba(55, 78, 25, 0.05) 25px 25px;
+    /* https://getcssscan.com/css-box-shadow-examples Box shadow #50 by Alligator */
 }
 /* This is the css for the GALLERY page 
    Will be updated when more info is provided
+   Sadly I was not able to get any photo's so I had nothing to provide
 */
