Footer was forgot, fixed

--- a/WMstyle.css
+++ b/WMstyle.css
@@ -54,6 +54,7 @@ nav ul {
   flex-wrap:wrap;
   align-items:center;
   justify-content:center;
+  text-align:center;
 }
 nav li {
     display:flex;
